[package]
name = "dropbox-index-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
dotenvy = "0.15.7"
reqwest = { version = "0.11.18", features = ["json", "stream"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
